# DeVi

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/devi/: array.hh  core
include/devi/core/: array  array.hh  types  types.hh
include/devi/core/dimension/: base  index  shape
include/devi/src/core/: __header_check__  array.hh  types.hh  view.hh
include/devi/src/core/dimension/: base.hh  index.hh  shape.hh  slice.hh
src/: array.cc
src/core/: array.cc
test/: CMakeLists.txt  array.cc  utils.hh
test/core/: array.cc  index.cc  shape.cc
